--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
 	"devDependencies": {
 		"typescript": "^4.5.4",
 		"vite": "^2.9.5"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.1.1"
 	}
 }
