--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 		"deploy": "./deploy.sh"
 	},
 	"devDependencies": {
+		"@interactjs/types": "^1.10.11",
 		"typescript": "^4.5.4",
 		"vite": "^2.9.5"
 	},
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^6.1.1"
+		"@fortawesome/fontawesome-free": "^6.1.1",
+		"interactjs": "^1.10.11"
 	}
 }
