--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"devDependencies": {
 		"@interactjs/types": "^1.10.11",
+		"sass": "^1.52.1",
 		"typescript": "^4.5.4",
 		"vite": "^2.9.5"
 	},
