--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
 	},
 	"devDependencies": {
 		"@interactjs/types": "^1.10.11",
+		"@types/sortablejs": "^1.13.0",
 		"sass": "^1.52.1",
 		"typescript": "^4.5.4",
 		"vite": "^2.9.5"
 	},
 	"dependencies": {
+		"@achtaitaipai/color-picker": "^1.0.5",
 		"@fortawesome/fontawesome-free": "^6.1.1",
-		"interactjs": "^1.10.11"
+		"interactjs": "^1.10.11",
+		"sortablejs": "^1.15.0"
 	}
 }
