--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"devDependencies": {
 		"@interactjs/types": "^1.10.11",
+		"@types/micromodal": "^0.3.3",
 		"@types/sortablejs": "^1.13.0",
 		"sass": "^1.52.1",
 		"typescript": "^4.5.4",
@@ -19,6 +20,7 @@
 		"@achtaitaipai/color-picker": "^1.0.5",
 		"@fortawesome/fontawesome-free": "^6.1.1",
 		"interactjs": "^1.10.11",
+		"micromodal": "^0.4.10",
 		"sortablejs": "^1.15.0"
 	}
 }
